--- a/scss/_custom-styles.scss
+++ b/scss/_custom-styles.scss
@@ -1,7 +1,7 @@
 // Add additional styles here. For example, overwrite certain styles or add new components.
 // Tip: You can use bootstrap's powerful mixins here!
 
-.btn{
+.btn-primarioP1{
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -32,6 +32,10 @@
 }
 .slider-4{
 	background: #ff7c38;
+}
+
+.tabla-mem{
+    height: 80vw;
 }
 
 .formulario {
