--- a/scss/_custom-variables.scss
+++ b/scss/_custom-variables.scss
@@ -35,6 +35,6 @@ $theme-colors:(
     "primarioTrojo": #ff3133,
     "secundarioTrojo": #ef8143,
     "primarioP1": #ff4136,
+    "primarioJ1": #4efffd, //Light Blue 700
+    "secundarioJ1": rgba(99,66,30,0.1), //Light Blue 700
 );
-
-
