--- a/scss/_custom-variables.scss
+++ b/scss/_custom-variables.scss
@@ -9,8 +9,8 @@
 $enable-gradients: true;
 
 // Changing the body background and text
-$body-bg: #fe6349;
-$body-color: color-yiq($body-bg);
+//$body-bg: #fe6349;
+//$body-color: color-yiq($body-bg);
 
 // Changing the border radius of buttons
 $border-radius: 30px;
