--- a/scss/_custom-styles.scss
+++ b/scss/_custom-styles.scss
@@ -7,20 +7,24 @@
 }
 
 .dPreguntas {
+    //height: 100%;
     height: 50vh;
     align-items: center;
+    
 }
 .slider-1, .slider-2, .slider-3 {
 	min-height: 100vh;
     /*height: 50vh;*/
 	text-align: center;
     vertical-align: middle ;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 .slider-1{
-    background: -webkit-linear-gradient(left, #FF4E50 , #F9D423); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(right, #FF4E50, #F9D423); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(right, #FF4E50, #F9D423); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to right, #FF4E50 , #F9D423); /* Standard syntax */
+    background: -webkit-linear-gradient(left, #fe6d46 , #fab52e); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(left, #fe6d46 , #fab52e); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(left, #fe6d46 , #fab52e); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, #fe6d46 , #fab52e); /* Standard syntax */
 }
 .slider-2{
     background: -webkit-linear-gradient(left, #00B4DB , #0083B0); /* For Safari 5.1 to 6.0 */
